--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/CNMBillView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/CNMBillView.xib
@@ -11,7 +11,10 @@
             <connections>
                 <outlet property="amountLb" destination="hIA-7A-YTt" id="xOy-1m-pXK"/>
                 <outlet property="billNoLb" destination="hmh-EB-Hyr" id="L8c-9B-m7z"/>
+                <outlet property="promoTagIV" destination="8AG-Ke-rc9" id="K6T-iy-TeA"/>
                 <outlet property="statusBtn" destination="JhZ-fA-tvw" id="A1B-sF-saa"/>
+                <outlet property="statusBtnH" destination="hFH-8F-yJw" id="Q6V-ca-HIw"/>
+                <outlet property="statusBtnW" destination="qRj-g1-SFh" id="dUv-EU-bxj"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,18 +26,21 @@
                     <rect key="frame" x="0.0" y="0.0" width="414" height="153"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JhZ-fA-tvw">
-                            <rect key="frame" x="319" y="60.5" width="80" height="32"/>
+                            <rect key="frame" x="309" y="56.5" width="90" height="40"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="32" id="hFH-8F-yJw"/>
-                                <constraint firstAttribute="width" constant="80" id="qRj-g1-SFh"/>
+                                <constraint firstAttribute="height" constant="40" id="hFH-8F-yJw"/>
+                                <constraint firstAttribute="width" constant="90" id="qRj-g1-SFh"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
-                            <state key="normal" title="提交">
+                            <state key="normal" title="上传凭证催单">
                                 <color key="titleColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
                         </button>
-                        <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="n35-ss-yCe">
-                            <rect key="frame" x="15" y="60.5" width="144.5" height="32.5"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="promo_tag" translatesAutoresizingMaskIntoConstraints="NO" id="8AG-Ke-rc9">
+                            <rect key="frame" x="359" y="56.5" width="40" height="13"/>
+                        </imageView>
+                        <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="n35-ss-yCe">
+                            <rect key="frame" x="15" y="60.5" width="142.5" height="32.5"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="GEn-90-X04">
                                     <rect key="frame" x="0.0" y="0.0" width="83" height="32.5"/>
@@ -54,7 +60,7 @@
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="WJb-Hw-asq">
-                                    <rect key="frame" x="95" y="0.0" width="49.5" height="32.5"/>
+                                    <rect key="frame" x="93" y="0.0" width="49.5" height="32.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="存款金额" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w7A-9D-QRj">
                                             <rect key="frame" x="0.0" y="0.0" width="49.5" height="14.5"/>
@@ -91,9 +97,11 @@
                     <constraints>
                         <constraint firstItem="ur7-NP-dUu" firstAttribute="leading" secondItem="GEn-90-X04" secondAttribute="leading" id="1tk-1I-nYB"/>
                         <constraint firstItem="ur7-NP-dUu" firstAttribute="top" secondItem="GEn-90-X04" secondAttribute="top" id="4Tg-Kg-ccx"/>
+                        <constraint firstItem="JhZ-fA-tvw" firstAttribute="top" secondItem="8AG-Ke-rc9" secondAttribute="top" id="8Eh-N2-KXl"/>
                         <constraint firstAttribute="bottom" secondItem="BXI-42-t07" secondAttribute="bottom" id="9P8-0a-adO"/>
                         <constraint firstItem="ur7-NP-dUu" firstAttribute="bottom" secondItem="GEn-90-X04" secondAttribute="bottom" id="Jx8-dk-AJ6"/>
                         <constraint firstItem="n35-ss-yCe" firstAttribute="leading" secondItem="CBN-ZO-Rbt" secondAttribute="leading" constant="15" id="MlC-cA-M7k"/>
+                        <constraint firstItem="JhZ-fA-tvw" firstAttribute="trailing" secondItem="8AG-Ke-rc9" secondAttribute="trailing" id="NfZ-qB-Qxa"/>
                         <constraint firstAttribute="trailing" secondItem="JhZ-fA-tvw" secondAttribute="trailing" constant="15" id="Ptk-v0-G2e"/>
                         <constraint firstItem="ur7-NP-dUu" firstAttribute="trailing" secondItem="GEn-90-X04" secondAttribute="trailing" id="Rnd-uB-jyr"/>
                         <constraint firstItem="BXI-42-t07" firstAttribute="leading" secondItem="CBN-ZO-Rbt" secondAttribute="leading" constant="15" id="Xzd-uY-PT3"/>
@@ -114,4 +122,7 @@
             <point key="canvasLocation" x="137.68115942028987" y="-144.30803571428569"/>
         </view>
     </objects>
+    <resources>
+        <image name="promo_tag" width="40" height="13"/>
+    </resources>
 </document>
