--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/View/View/CNMUploadView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/View/View/CNMUploadView.xib
@@ -32,7 +32,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3rJ-5h-Iu0">
-                    <rect key="frame" x="0.0" y="338" width="414" height="524"/>
+                    <rect key="frame" x="0.0" y="327" width="414" height="535"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZkH-6h-7rv">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
@@ -72,7 +72,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uzS-kf-oZc">
-                            <rect key="frame" x="0.0" y="52" width="414" height="472"/>
+                            <rect key="frame" x="0.0" y="52" width="414" height="483"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Igg-4M-p1C">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="1"/>
@@ -349,9 +349,9 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qne-sW-f5Y">
-                                    <rect key="frame" x="15" y="337" width="384" height="54"/>
+                                    <rect key="frame" x="15" y="337" width="384" height="65"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="54" id="FGD-yP-wDl"/>
+                                        <constraint firstAttribute="width" secondItem="Qne-sW-f5Y" secondAttribute="height" multiplier="320:54" id="nth-vM-nfO"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name=".PingFangSC-Regular" family=".PingFang SC" pointSize="16"/>
                                     <inset key="titleEdgeInsets" minX="0.0" minY="-16" maxX="0.0" maxY="0.0"/>
@@ -360,7 +360,7 @@
                                     </connections>
                                 </button>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Osw-zB-fSB" userLabel="BottomView">
-                                    <rect key="frame" x="0.0" y="391" width="414" height="81"/>
+                                    <rect key="frame" x="0.0" y="402" width="414" height="81"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="如有疑问，请及时联系客服" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Zv-O6-wPB">
                                             <rect key="frame" x="135" y="15" width="144" height="17"/>
