--- a/HYNewNest/Features(主代码)/MyBonusComponent/View/BYMyBonusTableViewCell.xib
+++ b/HYNewNest/Features(主代码)/MyBonusComponent/View/BYMyBonusTableViewCell.xib
@@ -21,6 +21,32 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UfR-rC-aDj">
                         <rect key="frame" x="15" y="7.5" width="345" height="155.5"/>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bRk-6Z-qmx">
+                        <rect key="frame" x="27" y="15.5" width="230" height="22"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_倒数" translatesAutoresizingMaskIntoConstraints="NO" id="ROI-7X-mbX">
+                                <rect key="frame" x="5" y="3" width="16" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="Hh2-ov-OMC"/>
+                                    <constraint firstAttribute="width" constant="16" id="e5d-7G-miw"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="剩余时间:10天7时30分18秒" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EyJ-9g-sQu">
+                                <rect key="frame" x="26" y="4" width="150" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="EyJ-9g-sQu" firstAttribute="leading" secondItem="ROI-7X-mbX" secondAttribute="trailing" constant="5" id="62R-c1-NHy"/>
+                            <constraint firstItem="ROI-7X-mbX" firstAttribute="centerY" secondItem="bRk-6Z-qmx" secondAttribute="centerY" id="7ZM-H0-vg9"/>
+                            <constraint firstItem="EyJ-9g-sQu" firstAttribute="centerY" secondItem="bRk-6Z-qmx" secondAttribute="centerY" id="P28-Q9-lig"/>
+                            <constraint firstAttribute="width" secondItem="bRk-6Z-qmx" secondAttribute="height" multiplier="115:11" id="eNi-rX-VFe"/>
+                            <constraint firstItem="ROI-7X-mbX" firstAttribute="leading" secondItem="bRk-6Z-qmx" secondAttribute="leading" constant="5" id="icK-nD-elk"/>
+                        </constraints>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USDT" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pq7-yO-IaM">
                         <rect key="frame" x="30" y="44.5" width="45" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -75,41 +101,27 @@
                             <action selector="tapMoreAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="0xA-AX-fou"/>
                         </connections>
                     </button>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ROI-7X-mbX">
-                        <rect key="frame" x="15" y="7.5" width="30" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="WMD-2y-mhJ"/>
-                            <constraint firstAttribute="width" constant="30" id="YeK-Tb-yL7"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="剩余时间:10天7时30分18秒" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EyJ-9g-sQu">
-                        <rect key="frame" x="55" y="15.5" width="150" height="14.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="UfR-rC-aDj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7.5" id="1J2-p6-cGP"/>
+                    <constraint firstItem="bRk-6Z-qmx" firstAttribute="leading" secondItem="UfR-rC-aDj" secondAttribute="leading" constant="12" id="4k1-RV-B8Q"/>
                     <constraint firstItem="nsh-lS-MfQ" firstAttribute="top" secondItem="TEH-US-3Pd" secondAttribute="bottom" constant="5" id="4uj-yz-FiQ"/>
                     <constraint firstItem="TEH-US-3Pd" firstAttribute="top" secondItem="wzr-xZ-7OD" secondAttribute="top" constant="-5" id="8B6-bb-v4E"/>
                     <constraint firstItem="Pq7-yO-IaM" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="-30.5" id="9rR-1E-I2y"/>
-                    <constraint firstItem="ROI-7X-mbX" firstAttribute="leading" secondItem="UfR-rC-aDj" secondAttribute="leading" id="A7m-iv-Rad"/>
                     <constraint firstItem="Pq7-yO-IaM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="AyN-2B-XI2"/>
                     <constraint firstAttribute="bottom" secondItem="UfR-rC-aDj" secondAttribute="bottom" constant="7" id="EXF-3g-ru0"/>
-                    <constraint firstItem="ROI-7X-mbX" firstAttribute="top" secondItem="UfR-rC-aDj" secondAttribute="top" id="Pdo-qS-ZD2"/>
+                    <constraint firstItem="bRk-6Z-qmx" firstAttribute="height" secondItem="UfR-rC-aDj" secondAttribute="height" multiplier="0.141479" id="KjU-XC-Vh0"/>
                     <constraint firstAttribute="bottomMargin" secondItem="eDr-d7-E2A" secondAttribute="bottom" constant="15" id="PmR-Qp-UtP"/>
                     <constraint firstAttribute="trailing" secondItem="UfR-rC-aDj" secondAttribute="trailing" constant="15" id="QYO-ne-MNn"/>
                     <constraint firstItem="cF7-8s-KQf" firstAttribute="leading" secondItem="Pq7-yO-IaM" secondAttribute="leading" id="Sah-Iu-y7u"/>
                     <constraint firstItem="eDr-d7-E2A" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Toz-Np-d34"/>
                     <constraint firstItem="TEH-US-3Pd" firstAttribute="leading" secondItem="wzr-xZ-7OD" secondAttribute="trailing" constant="30" id="U7A-90-e2p"/>
                     <constraint firstAttribute="trailingMargin" secondItem="cF7-8s-KQf" secondAttribute="trailing" constant="15" id="VxD-d3-AYw"/>
-                    <constraint firstItem="EyJ-9g-sQu" firstAttribute="centerY" secondItem="ROI-7X-mbX" secondAttribute="centerY" id="bEj-LE-xrX"/>
+                    <constraint firstItem="bRk-6Z-qmx" firstAttribute="top" secondItem="UfR-rC-aDj" secondAttribute="top" constant="8" id="YRQ-I7-Xak"/>
                     <constraint firstItem="UfR-rC-aDj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="bau-Im-Bce"/>
                     <constraint firstItem="wzr-xZ-7OD" firstAttribute="leading" secondItem="Pq7-yO-IaM" secondAttribute="trailing" constant="10" id="dSG-Ti-HX5"/>
                     <constraint firstItem="wzr-xZ-7OD" firstAttribute="centerY" secondItem="Pq7-yO-IaM" secondAttribute="centerY" id="gQp-Ve-sPa"/>
                     <constraint firstItem="cF7-8s-KQf" firstAttribute="bottom" secondItem="eDr-d7-E2A" secondAttribute="top" constant="-5" id="h2C-K8-txr"/>
-                    <constraint firstItem="EyJ-9g-sQu" firstAttribute="leading" secondItem="ROI-7X-mbX" secondAttribute="trailing" constant="10" id="psi-mk-gxk"/>
                     <constraint firstItem="nsh-lS-MfQ" firstAttribute="leading" secondItem="TEH-US-3Pd" secondAttribute="leading" id="xNe-BY-VgT"/>
                 </constraints>
             </tableViewCellContentView>
@@ -117,6 +129,7 @@
             <connections>
                 <outlet property="actionButton" destination="eDr-d7-E2A" id="SIP-ta-idf"/>
                 <outlet property="amountLabel" destination="wzr-xZ-7OD" id="zLT-uk-bep"/>
+                <outlet property="countDownBGImageView" destination="bRk-6Z-qmx" id="2in-Ug-99d"/>
                 <outlet property="countDownTimerLabel" destination="EyJ-9g-sQu" id="1bj-9U-Bis"/>
                 <outlet property="currencyLabel" destination="Pq7-yO-IaM" id="WhY-Ww-Q67"/>
                 <outlet property="lblEndDate" destination="nsh-lS-MfQ" id="Zds-Xl-hcX"/>
@@ -127,6 +140,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="icon_倒数" width="16" height="16"/>
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
