--- a/HYNewNest/Features(主代码)/MyBonusComponent/View/BYMyBonusTableViewCell.xib
+++ b/HYNewNest/Features(主代码)/MyBonusComponent/View/BYMyBonusTableViewCell.xib
@@ -12,14 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="170" id="KGk-i7-Jjw" customClass="BYMyBonusTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="170"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="215"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="170"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="215"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UfR-rC-aDj">
-                        <rect key="frame" x="15" y="7.5" width="345" height="155.5"/>
+                        <rect key="frame" x="15" y="7.5" width="345" height="200.5"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bRk-6Z-qmx">
                         <rect key="frame" x="27" y="15.5" width="230" height="22"/>
@@ -47,46 +47,44 @@
                             <constraint firstItem="ROI-7X-mbX" firstAttribute="leading" secondItem="bRk-6Z-qmx" secondAttribute="leading" constant="5" id="icK-nD-elk"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USDT" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pq7-yO-IaM">
-                        <rect key="frame" x="30" y="44.5" width="45" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WIz-YW-74T">
+                        <rect key="frame" x="167.5" y="65.5" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="cpA-Yv-AdE"/>
+                            <constraint firstAttribute="width" constant="20" id="gjQ-eJ-PDL"/>
+                        </constraints>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="18" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wzr-xZ-7OD">
-                        <rect key="frame" x="85" y="36.5" width="32.5" height="36"/>
+                        <rect key="frame" x="129" y="55.5" width="32.5" height="36"/>
                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="现金红包" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TEH-US-3Pd">
-                        <rect key="frame" x="147.5" y="31.5" width="82" height="24"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                        <rect key="frame" x="207.5" y="60" width="105.5" height="31.5"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="有效期:2022年3月28日至2022年3月31日" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nsh-lS-MfQ">
-                        <rect key="frame" x="147.5" y="60.5" width="210" height="13.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="有效期:2022年3月28日至2022年3月31日" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nsh-lS-MfQ">
+                        <rect key="frame" x="85" y="99.5" width="228" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请在有效期内充值满888USDT再领取红包,888倍流水取款,逾期作废" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cF7-8s-KQf">
+                        <rect key="frame" x="19" y="124" width="337.5" height="13.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请在有效期内充值满888USDT再领取红包,888倍流水取款,逾期作废" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cF7-8s-KQf">
-                        <rect key="frame" x="30" y="102" width="310" height="12"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="textColor" red="0.56470588235294117" green="0.56470588235294117" blue="0.60784313725490191" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eDr-d7-E2A">
-                        <rect key="frame" x="152.5" y="119" width="70" height="25"/>
+                        <rect key="frame" x="87.5" y="145" width="200" height="44"/>
                         <color key="backgroundColor" systemColor="linkColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="fGC-mN-5hI"/>
-                            <constraint firstAttribute="height" constant="25" id="rHd-Uf-2ub"/>
-                            <constraint firstAttribute="width" constant="70" id="xbv-tI-82L"/>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="zcz-wc-u2A"/>
+                            <constraint firstAttribute="width" secondItem="eDr-d7-E2A" secondAttribute="height" multiplier="50:11" id="jwK-IP-Gk9"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" title="立即领取">
                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -102,36 +100,40 @@
                         </connections>
                     </button>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="UfR-rC-aDj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7.5" id="1J2-p6-cGP"/>
                     <constraint firstItem="bRk-6Z-qmx" firstAttribute="leading" secondItem="UfR-rC-aDj" secondAttribute="leading" constant="12" id="4k1-RV-B8Q"/>
-                    <constraint firstItem="nsh-lS-MfQ" firstAttribute="top" secondItem="TEH-US-3Pd" secondAttribute="bottom" constant="5" id="4uj-yz-FiQ"/>
-                    <constraint firstItem="TEH-US-3Pd" firstAttribute="top" secondItem="wzr-xZ-7OD" secondAttribute="top" constant="-5" id="8B6-bb-v4E"/>
-                    <constraint firstItem="Pq7-yO-IaM" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="-30.5" id="9rR-1E-I2y"/>
-                    <constraint firstItem="Pq7-yO-IaM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="AyN-2B-XI2"/>
+                    <constraint firstItem="WIz-YW-74T" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" constant="-10" id="5Y3-rK-SNm"/>
                     <constraint firstAttribute="bottom" secondItem="UfR-rC-aDj" secondAttribute="bottom" constant="7" id="EXF-3g-ru0"/>
-                    <constraint firstItem="bRk-6Z-qmx" firstAttribute="height" secondItem="UfR-rC-aDj" secondAttribute="height" multiplier="0.141479" id="KjU-XC-Vh0"/>
+                    <constraint firstItem="bRk-6Z-qmx" firstAttribute="height" secondItem="UfR-rC-aDj" secondAttribute="height" multiplier="0.109726" id="Had-5Q-bXY"/>
+                    <constraint firstItem="TEH-US-3Pd" firstAttribute="leading" secondItem="WIz-YW-74T" secondAttribute="trailing" constant="20" id="PPr-dh-kl0"/>
                     <constraint firstAttribute="bottomMargin" secondItem="eDr-d7-E2A" secondAttribute="bottom" constant="15" id="PmR-Qp-UtP"/>
+                    <constraint firstItem="nsh-lS-MfQ" firstAttribute="top" secondItem="WIz-YW-74T" secondAttribute="bottom" constant="14" id="QPI-YG-5zl"/>
                     <constraint firstAttribute="trailing" secondItem="UfR-rC-aDj" secondAttribute="trailing" constant="15" id="QYO-ne-MNn"/>
-                    <constraint firstItem="cF7-8s-KQf" firstAttribute="leading" secondItem="Pq7-yO-IaM" secondAttribute="leading" id="Sah-Iu-y7u"/>
                     <constraint firstItem="eDr-d7-E2A" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Toz-Np-d34"/>
-                    <constraint firstItem="TEH-US-3Pd" firstAttribute="leading" secondItem="wzr-xZ-7OD" secondAttribute="trailing" constant="30" id="U7A-90-e2p"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="cF7-8s-KQf" secondAttribute="trailing" constant="15" id="VxD-d3-AYw"/>
                     <constraint firstItem="bRk-6Z-qmx" firstAttribute="top" secondItem="UfR-rC-aDj" secondAttribute="top" constant="8" id="YRQ-I7-Xak"/>
+                    <constraint firstItem="cF7-8s-KQf" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="aQZ-0Z-7BR"/>
                     <constraint firstItem="UfR-rC-aDj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="bau-Im-Bce"/>
-                    <constraint firstItem="wzr-xZ-7OD" firstAttribute="leading" secondItem="Pq7-yO-IaM" secondAttribute="trailing" constant="10" id="dSG-Ti-HX5"/>
-                    <constraint firstItem="wzr-xZ-7OD" firstAttribute="centerY" secondItem="Pq7-yO-IaM" secondAttribute="centerY" id="gQp-Ve-sPa"/>
-                    <constraint firstItem="cF7-8s-KQf" firstAttribute="bottom" secondItem="eDr-d7-E2A" secondAttribute="top" constant="-5" id="h2C-K8-txr"/>
-                    <constraint firstItem="nsh-lS-MfQ" firstAttribute="leading" secondItem="TEH-US-3Pd" secondAttribute="leading" id="xNe-BY-VgT"/>
+                    <constraint firstItem="TEH-US-3Pd" firstAttribute="bottom" secondItem="wzr-xZ-7OD" secondAttribute="bottom" id="bzx-20-bWp"/>
+                    <constraint firstItem="nsh-lS-MfQ" firstAttribute="trailing" secondItem="TEH-US-3Pd" secondAttribute="trailing" id="dZL-49-hBk"/>
+                    <constraint firstItem="eDr-d7-E2A" firstAttribute="height" secondItem="UfR-rC-aDj" secondAttribute="height" multiplier="0.219451" id="hWr-B7-yrg"/>
+                    <constraint firstItem="WIz-YW-74T" firstAttribute="top" secondItem="bRk-6Z-qmx" secondAttribute="bottom" constant="28" id="io5-Zn-76H"/>
+                    <constraint firstItem="wzr-xZ-7OD" firstAttribute="bottom" secondItem="WIz-YW-74T" secondAttribute="bottom" constant="6" id="ph2-mX-R4i"/>
+                    <constraint firstItem="wzr-xZ-7OD" firstAttribute="trailing" secondItem="WIz-YW-74T" secondAttribute="leading" constant="-6" id="sLz-XC-KL9"/>
+                    <constraint firstItem="cF7-8s-KQf" firstAttribute="top" secondItem="nsh-lS-MfQ" secondAttribute="bottom" constant="10" id="tNt-4g-uZP"/>
+                    <constraint firstItem="TEH-US-3Pd" firstAttribute="width" secondItem="UfR-rC-aDj" secondAttribute="width" multiplier="0.305797" id="vOk-K3-K7G"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="actionButton" destination="eDr-d7-E2A" id="SIP-ta-idf"/>
                 <outlet property="amountLabel" destination="wzr-xZ-7OD" id="zLT-uk-bep"/>
                 <outlet property="countDownBGImageView" destination="bRk-6Z-qmx" id="2in-Ug-99d"/>
                 <outlet property="countDownTimerLabel" destination="EyJ-9g-sQu" id="1bj-9U-Bis"/>
-                <outlet property="currencyLabel" destination="Pq7-yO-IaM" id="WhY-Ww-Q67"/>
+                <outlet property="currencyImageView" destination="WIz-YW-74T" id="brh-r7-aWj"/>
+                <outlet property="gradientLabel" destination="TEH-US-3Pd" id="ufg-6l-dQT"/>
                 <outlet property="lblEndDate" destination="nsh-lS-MfQ" id="Zds-Xl-hcX"/>
                 <outlet property="messageLabel" destination="cF7-8s-KQf" id="Hvf-Dx-b2n"/>
                 <outlet property="topImgView" destination="UfR-rC-aDj" id="rHc-Ba-ePq"/>
